[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
comrak = "0.18.0"
regex = "1.9.3"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
